# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "127.0.0.01:8080",
+    "host": "127.0.0.1:8080",
     "basePath": "/",
     "paths": {
         "/api/adverts": {
@@ -486,6 +486,35 @@
                         "description": "token",
                         "name": "token",
                         "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/articles/content/{id}": {
+            "get": {
+                "description": "获取文章正文",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "获取文章正文",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -2318,6 +2347,83 @@
                 }
             }
         },
+        "/api/user_info": {
+            "get": {
+                "description": "用户信息",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理"
+                ],
+                "summary": "用户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.UserModel"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "修改当前登录人的昵称，签名，链接",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理"
+                ],
+                "summary": "修改当前登录人的昵称，签名，链接",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "昵称，签名，链接",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user_api.UserUpdateNicknameRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user_password": {
             "put": {
                 "description": "修改登录人的密码",
@@ -3639,8 +3745,16 @@
                     "description": "主键ID",
                     "type": "integer"
                 },
+                "integral": {
+                    "description": "我的积分",
+                    "type": "integer"
+                },
                 "ip": {
                     "description": "ip地址",
+                    "type": "string"
+                },
+                "link": {
+                    "description": "我的链接地址",
                     "type": "string"
                 },
                 "nick_name": {
@@ -3654,6 +3768,10 @@
                             "$ref": "#/definitions/ctype.Role"
                         }
                     ]
+                },
+                "sign": {
+                    "description": "我的签名",
+                    "type": "string"
                 },
                 "sign_status": {
                     "description": "注册来源",
@@ -3978,6 +4096,20 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "user_api.UserUpdateNicknameRequest": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                },
+                "nick_name": {
+                    "type": "string"
+                },
+                "sign": {
+                    "type": "string"
                 }
             }
         }
