# routers/article_router.go
@@ -18,7 +18,8 @@ func (router RouterGroup) ArticleRouter() {
 	router.POST("articles/collects", middleware.JwtAuth(), app.ArticleCollCreateView)
 	router.GET("articles/collects", middleware.JwtAuth(), app.ArticleCollListView)
 	router.DELETE("articles/collects", middleware.JwtAuth(), app.ArticleCollBatchRemoveView)
-	router.GET("articles/text", app.FullTextSearchView) // 全文搜索
-	router.GET("articles/digg", app.ArticleDiggView)    // 文章点赞
+	router.GET("articles/text", app.FullTextSearchView)            // 全文搜索
+	router.GET("articles/digg", app.ArticleDiggView)               // 文章点赞
+	router.GET("articles/content/:id", app.ArticleContentByIDView) // 文章内容
 	router.GET("articles/:id", app.ArticleDetailView)
 }
